<resources>
    <string name="app_name">hifi chat</string>
    <string name="hifi_chatting">Hifi Chatting</string>
    <string name="send">Send</string>
    <string name="write_your_message_here">write your message here</string>
    <string name="typing">typing...</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="receiver_name">receiver name</string>
</resources>