<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#333333"
    android:layout_height="match_parent"
    tools:context=".first">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#E3E0E0"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/but"
        android:padding="10dp"
        android:text="@string/hifi_chatting"
        android:textSize="20sp"
        android:id="@+id/t1"
        android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:weightSum="6"
    android:layout_centerVertical="true"
    android:id="@+id/l2"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



    <EditText
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="3"
        android:background="#424040"
        android:hint="@string/username"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#BCAAA4"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/rec"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="#424040"
        android:hint="@string/receiver_name"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#BCAAA4"
        android:textSize="17sp" />
</LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/but2"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/submit"
        android:textSize="17sp" />


</RelativeLayout>